package nl.han.se.bewd.prototypetrenadapterpattern;

    public interface IHotelService {
        void fetchHotels(double latitude, double longitude);
    }
