@startuml

interface IHotelService {
    +fetchHotels(destination)
}

class HotelClient {
    +useHotelService(destination)
}

class HotelAdapter implements IHotelService {
    +fetchHotels(destination)
    -map(response): Hotel
}

interface "Booking com API" <<external interface>> {
    +fetchHotels(destination)
}

HotelClient --> IHotelService : uses
HotelAdapter ..> "Booking com API" : calls
@enduml